(env
  (dev
    (flags (:standard -warn-error -A -g ))))


(executable
  (name		tls_ping_client)
  (public_name	tls_ping_client)
  (package	tlsping)
  (modules	tls_ping_client)
  (libraries	cmdliner hex socks socks-lwt tlsping)
 (preprocess
  (pps ppx_deriving_rpc ppx_sexp_conv lwt_ppx ppx_deriving_yojson))


)

(executable
  (name		tls_ping_server)
  (public_name	tls_ping_server)
  (package	tlsping)
  (modules	tls_ping_server)
  (libraries	cmdliner hex tlsping tls)

 (preprocess
  (pps ppx_deriving_rpc ppx_sexp_conv lwt_ppx ppx_deriving_yojson))


)


