
(library
  (name tlsping)
  (public_name tlsping)
  (synopsis "TLSPING implementation")
  (modules tlsping logger)
  (flags (:standard -safe-string))
  (wrapped false)
  (libraries logs.cli logs.fmt fmt.cli fmt.tty hex lwt.unix
  domain-name
  mirage-crypto
  tls x509 tls.lwt
             rresult)
 (preprocess
  (pps ppx_deriving_rpc ppx_sexp_conv lwt_ppx ppx_deriving_yojson))

)

(tests
  (names test_tlsping)
  (modules test_tlsping)
  (deps serialized_state.txt)
  (libraries tlsping alcotest)
 (preprocess
  (pps ppx_deriving_rpc ppx_sexp_conv lwt_ppx ppx_deriving_yojson)))


