(library 
  (name tlsping)
  (public_name tlsping)
  (synopsis "TLSPING implementation")
  (modules shared logger bouncer_client_conn_state)
  (flags (:standard -safe-string))
  (wrapped false)
  (libraries 
    logs.cli logs.fmt fmt.cli fmt.tty hex lwt.unix
  domain-name
  mirage-crypto
  tls x509 tls.lwt
             rresult
 mirage-kv mirage-kv-unix ke)
(preprocess (pps lwt_ppx))
)

(tests
  (names   test_tlsping test_bouncer_client_conn_state test_logger)
  (modules test_tlsping test_bouncer_client_conn_state test_logger)
  (deps serialized_state.txt)
  (libraries tlsping alcotest)
(preprocess (pps lwt_ppx))

)

